<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamixel_ros2_control</name>
  <version>0.0.1</version>
  <description>Package containing nodes for controlling dynamixel motors</description>
  <maintainer email="ros@nilsschulte.de">Nils Schulte</maintainer>
  <license>MIT</license>

  <author email="yutaka.kondo@youtalk.jp">Yutaka Kondo</author>
  <author email="ros@nilsschulte.de">Nils Schulte</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>dynamixel_sdk</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
